tests/neg-custom-args/captures/capt1.check
-- Error: tests/neg-custom-args/captures/capt1.scala:4:11 --------------------------------------------------------------
4 |  () => if x == null then y else y  // error
  |           ^
  |           (x : C^{cap[f]}) cannot be referenced here; it is not included in the allowed capture set {}
  |           of an enclosing function literal with expected type () -> C
-- Error: tests/neg-custom-args/captures/capt1.scala:7:11 --------------------------------------------------------------
7 |  () => if x == null then y else y  // error
  |           ^
  |           (x : C^{cap[g]}) cannot be referenced here; it is not included in the allowed capture set {}
  |           of an enclosing function literal with expected type Matchable
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/capt1.scala:14:2 -----------------------------------------
14 |  def f(y: Int) = if x == null then y else y  // error
   |  ^
   |  Found:    (y: Int) ->{x} Int
   |  Required: Matchable
15 |  f
   |
   | longer explanation available when compiling with `-explain`
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/capt1.scala:21:2 -----------------------------------------
21 |  class F(y: Int) extends A:   // error
   |  ^
   |  Found:    A^{x}
   |  Required: A
22 |    def m() = if x == null then y else y
23 |  F(22)
   |
   | longer explanation available when compiling with `-explain`
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/capt1.scala:26:2 -----------------------------------------
26 |  new A: // error
   |  ^
   |  Found:    A^{x}
   |  Required: A
27 |    def m() = if x == null then y else y
   |
   | longer explanation available when compiling with `-explain`
-- Error: tests/neg-custom-args/captures/capt1.scala:32:30 -------------------------------------------------------------
32 |  val z2 = h[() -> Cap](() => x) // error
   |                              ^
   |               (x : C^{cap[<root>]}) cannot be referenced here; it is not included in the allowed capture set {}
   |               of an enclosing function literal with expected type () -> box C^{cap[<root>]}
